tests/snapshots/lexer/script_py.snap
---
source: tests/lexer_golden.rs
expression: comments
---
- line: 1
  end_line: 1
  kind: line
  marker: "#!"
  own_line: true
  indent: ""
  raw: "#!/usr/bin/env python3"
  text: /usr/bin/env python3
- line: 2
  end_line: 2
  kind: line
  marker: "#"
  own_line: true
  indent: ""
  raw: "# 2026-09-24: dated module comment"
  text: "2026-09-24: dated module comment"
- line: 6
  end_line: 6
  kind: line
  marker: "#"
  own_line: false
  indent: ""
  raw: "# trailing comment"
  text: trailing comment
- line: 10
  end_line: 10
  kind: line
  marker: "#"
  own_line: false
  indent: ""
  raw: "# after raw"
  text: after raw
- line: 11
  end_line: 11
  kind: line
  marker: "#"
  own_line: false
  indent: ""
  raw: "# f-string"
  text: f-string
- line: 12
  end_line: 12
  kind: line
  marker: "#"
  own_line: false
  indent: ""
  raw: "# noqa: E501"
  text: "noqa: E501"
